--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ pytz = "^2023.3"
 ccxt = "^4.1.0"
 ta = "^0.10.2"
 scikit-learn = "^1.3.0"
-    plotly = "^5.17.0"
+plotly = "^5.17.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -40,11 +40,12 @@ pre-commit = "^3.6.0"
 bandit = "^1.7.5"
 detect-secrets = "^1.4.0"
 
-[tool.poetry.group.llm.dependencies]
-llama-cpp-python = "^0.2.0"
-sentence-transformers = "^2.2.2"
-transformers = "^4.36.0"
-torch = "^2.1.0"
+# LLM dependencies - uncomment when ready to use
+# [tool.poetry.group.llm.dependencies]
+# llama-cpp-python = "^0.2.0"
+# sentence-transformers = "^2.2.2"
+# transformers = "^4.36.0"
+# torch = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
