--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      run: poetry install --with dev,llm
+      run: poetry install --with dev
     
     - name: Activate cached venv
       run: source .venv/bin/activate
@@ -89,10 +89,18 @@ jobs:
         virtualenvs-create: true
         virtualenvs-in-project: true
     
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        version: latest
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    
+    - name: Install dependencies
+      run: poetry install
+    
     - name: Build package
-      run: |
-        source .venv/bin/activate
-        poetry build
+      run: poetry build
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
