--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ ccxt = "^4.1.0"
 ta = "^0.10.2"
 scikit-learn = "^1.3.0"
 plotly = "^5.17.0"
+scipy = "^1.11.0"
+joblib = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
