--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,9 +77,11 @@ extend-exclude = '''
 )/
 '''
 
-[tool.ruff.lint]
+[tool.ruff]
 target-version = "py311"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
