feat: Complete algorithmic trading system implementation
- Fully functional backtesting engine with accurate PnL tracking
- Complete data pipeline (collection, processing, feature engineering)
- REST API server with all endpoints operational
- CLI tools for all operations
- Data models for features, signals, and performance
- Comprehensive testing and validation
- All linting errors resolved
- System ready for strategy development and optimization

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ venv.bak/
 *.swp
 *.swo
 *~
+cspell.json
 
 # OS
 .DS_Store
@@ -81,3 +82,4 @@ state/
 # Sample data (keep small samples for testing)
 !data/raw/binance/*/1m/*.sample.csv
 !data/processed/*.sample.parquet
+!src/data/
