--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "aiohttp>=3.12.15,<4.0.0",
     "pyyaml>=6.0.2,<7.0.0",
     "pytz>=2025.2,<2026.0",
+    "flask>=2.3.0,<3.0.0",
+    "flask-cors>=4.0.0,<5.0.0",
+    "psutil>=7.0.0,<8.0.0",
     "pytest>=8.4.1,<9.0.0",
     "pytest-asyncio>=1.1.0,<2.0.0",
     "black>=25.1.0,<26.0.0",
@@ -22,7 +25,6 @@ dependencies = [
     "matplotlib>=3.10.5,<4.0.0",
     "seaborn>=0.13.2,<0.14.0",
     "jupyter>=1.1.1,<2.0.0",
-    "psutil>=7.0.0,<8.0.0",
     "python-dotenv>=1.1.1,<2.0.0"
 ]
 
@@ -47,6 +49,8 @@ fastparquet = ">=2024.11.0,<2025.0.0"
 aiohttp = ">=3.12.15,<4.0.0"
 pyyaml = ">=6.0.2,<7.0.0"
 pytz = ">=2025.2,<2026.0"
+flask = ">=2.3.0,<3.0.0"
+flask-cors = ">=4.0.0,<5.0.0"
 psutil = ">=7.0.0,<8.0.0"
 python-dotenv = ">=1.1.1,<2.0.0"
 
