--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,13 @@ pyyaml>=6.0
 pandas>=1.5.0
 numpy>=1.21.0
 
+# Web framework and API
+flask>=2.3.0
+flask-cors>=4.0.0
+
+# System monitoring
+psutil>=5.9.0
+
 # Data processing and storage
 pyarrow>=10.0.0  # For Parquet file support
 fastparquet>=0.8.0  # Alternative Parquet support
