--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,9 @@ requests>=2.31.0
 aiohttp>=3.8.0
 asyncio>=3.4.3
 
-# Machine Learning dependencies
-scikit-learn>=1.3.0
-joblib>=1.3.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
+# LLM dependencies
+gpt4all>=2.0.0
+jsonschema>=4.17.0
 
 # Data processing
 pytz>=2023.3
